frontend/test/should_fail/array_map_exec_scalar.grg
rule array_map_exec(ref a:array<int>) {
	modify {
		---
		exec({ aa:array<int> = a.map<int>{value:int -> value * 1.5} });
	}
}
